fixed navbar mobile menu z-index issue

--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,6 @@ html {
 .header-z-index {
     z-index: 1000;
 }
+div#headlessui-menu-items{
+    z-index:500 !important;
+}
